Tic tac toe game

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
+    <br>
+  <div class="msgcontainer hide ">
+    <center><p id="msg">Winner</p></center>
+</div>
+
     <main>
     <center><h1 style="color: white;">Tic-Tac-Toe</h1></center>
 
@@ -23,7 +28,13 @@
         <button class="box"></button>
       </div>
       </div>
-      <center><button id = "reset-btn">Reset Game</button></center>
+     <center>
+    <div>
+        <button id="resetbtn">Reset Game</button>
+        <button id="newbtn">New Game</button>
+    </div>
+</center>
+
     </main>
     <script src = "app.js"></script>
   </body>
