Added the instructions about the game

--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
         <button id="newbtn">New Game</button>
     </div>
 </center>
+<br>
+<br>
+
+    <center><div id ="instructions">
+      <button onclick="openInstructions()">How To Play ?</button>
+    </div></center>
+
+   
+ 
 
     </main>
     <script src = "app.js"></script>
