--- a/instructions.html
+++ b/instructions.html
@@ -100,7 +100,7 @@
       }
 
       .section h2 {
-        color: black;
+        color: #009688;
         border-bottom: 2px solid #009688;
         padding-bottom: 5px;
       }
