Added the instructions img

--- a/instructions.html
+++ b/instructions.html
@@ -42,7 +42,7 @@
         <h2>Winning Patterns</h2>
         <center>
           <img
-            src="tic-tac-toe-game-win-combination.webp"
+            src="instructionsImg.webp"
             height="400"
             width="500"
             alt="Tic Tac Toe Win Combination"
