--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <main>
       <center><h1>Tic-Tac-Toe</h1></center>
 
+      <script>
+        var message =
+          "Desktop mode recommended for the better gaming experience If you are on mobile, switch to desktop mode for better gameplay.";
+        alert(message);
+      </script>
+
       <div class="container">
         <div class="game">
           <button class="box"></button>
